<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:background="#f5f5f5">

    <android.support.v7.widget.CardView
        android:id="@+id/content_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="#fff">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:paddingStart="8dp"
            android:paddingEnd="2dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <TextView
                    android:id="@+id/total_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total_time"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="35"
                        android:layout_gravity="bottom"/>

                    <TextView
                        android:id="@+id/unit_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textStyle="normal"
                        android:text="mins"
                        android:layout_marginStart="3dp"
                        android:layout_gravity="bottom"/>

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#808080"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:paddingStart="8dp"
                android:paddingEnd="2dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/pre_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_prep"
                        android:textStyle="bold"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/pre_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10 mins"
                        android:textStyle="normal"
                        android:textSize="15sp"
                        android:textAllCaps="false"
                        android:layout_marginStart="15dp"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/cook_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_cook"
                        android:textStyle="bold"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/cook_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25 mins"
                        android:textStyle="normal"
                        android:textSize="15sp"
                        android:textAllCaps="false"
                        android:layout_marginStart="15dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="3dp"
        app:contentPadding="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:paddingTop="8dp"
            android:paddingBottom="3dp">

            <TextView
                android:id="@+id/ingredients_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_ingredients"
                android:textSize="18sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/service_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="4 SERVINGS"
                android:textStyle="bold"
                android:textColor="#808080"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/content_ingredient_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#343434"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                android:text="This is content"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="3dp"
        app:contentPadding="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:paddingTop="8dp"
            android:paddingBottom="3dp">

            <TextView
                android:id="@+id/directions_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_directions"
                android:textSize="18sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/content_direction_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#343434"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                android:text="This is content"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>